--- a/clock.html
+++ b/clock.html
@@ -11,17 +11,17 @@
     <div class="js-clock">
         <h1>clock!</h1>
     </div>
-   
-    <form class="js-form form">
-        <input type="text" placeholder="What is your name?"/>
-    </form>
+    <div class="content">
+        <form class="js-form form">
+            <input type="text" placeholder="What is your name?"/>
+        </form>
     
-    <h4 class="js-grettings grettings"></h4>
+        <h4 class="js-grettings grettings"></h4>
    
-    <form class="js-toDoForm">
-        <input type="text" placeholder="할 일을 적으세요.">
-    </form>
-    
+            <form class="js-toDoForm">
+                <input type="text" placeholder="할 일을 적으세요.">
+            </form>
+    </div>
     <ul class="js-toDoList">
 
     </ul>
