--- a/clock.html
+++ b/clock.html
@@ -18,11 +18,11 @@
     
         <h4 class="js-grettings grettings"></h4>
    
-            <form class="js-toDoForm">
+            <form class="js-toDoForm todoform">
                 <input type="text" placeholder="할 일을 적으세요.">
             </form>
     </div>
-    <ul class="js-toDoList">
+    <ul class="js-toDoList todolist">
 
     </ul>
     
