modify code & css

--- a/clock.html
+++ b/clock.html
@@ -10,6 +10,7 @@
    
     <div class="js-clock">
         <h1>clock!</h1>
+        <div class="js-day"></div>
     </div>
     <div class="content">
         <form class="js-form form">
