--- a/clock.html
+++ b/clock.html
@@ -31,5 +31,6 @@
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
     <script src="bground.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
