add weather.js modify css and extra coding

--- a/clock.html
+++ b/clock.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-   
+    <span class="js-weather weatherBox"></span>
+    <div class="copyright">dev by. sangjunTech</div>
     <div class="js-clock">
         <h1>clock!</h1>
         <div class="js-day"></div>
@@ -27,6 +28,7 @@
 
     </ul>
     
+
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
     <script src="todo.js"></script>
